# btzs-charts

./: CHANGELOG.md  LICENSE  README.md  btzs-charts.cabal  stack.yaml
.github/workflows/: ci.yml
app/: Main.hs
data/: AristaUltraEdu100.json  MockPaperTest.json  ProcessConfig.json  Stauffer-21steps.json
src/: BtzsCharts.hs
src/BtzsCharts/: CLI.hs  FilmAnalysis.hs  HDCurveFitting.hs  Interpolation.hs  PaperAnalysis.hs  PlotCurves.hs  Types.hs
test/: Spec.hs
test/BtzsCharts/: TypesSpec.hs
test/BtzsChartsTests/: CLISpec.hs  FilmAnalysisSpec.hs  Generators.hs  HDCurveFittingSpec.hs  InterpolationSpec.hs  PaperAnalysisSpec.hs  TypesSpec.hs
