cabal-version:       3.0
name:                btzs-charts
version:             0.0.0.0
synopsis:            Chart Generator for the BTZS system
description:
    Chart Generator for the BTZS system.
    See [README.md](https://github.com/mminutoli/btzs-charts#btzs-charts) for more details.
homepage:            https://github.com/mminutoli/btzs-charts
bug-reports:         https://github.com/mminutoli/btzs-charts/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Marco Minutoli
maintainer:          Marco Minutoli <mminutoli@gmail.com>
copyright:           2025 Marco Minutoli
category:            Film Photography
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 9.8.4

source-repository head
  type:                git
  location:            https://github.com/mminutoli/btzs-charts.git

common common-options
  build-depends:       base ^>= 4.19.1.0,
                       aeson,
                       -- bytestring,
                       containers,
                       -- Chart,
                       -- hmatrix-gsl,
                       vector,
                       text

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -Wnoncanonical-monad-instances
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
                       -fwrite-ide-info
                       -hiedir=.hie
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     BtzsCharts
                       BtzsCharts.Types

executable btzs-charts
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       btzs-charts
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite btzs-charts-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       btzs-charts,
                       tasty,
                       hedgehog,
                       tasty-hedgehog
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
